--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,5 @@ RewriteBase /webapp/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php [L]
+RewriteRule ^(.*)$ /webapp/index.php [L]
 </IfModule>
