--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,12 @@
 <IfModule mod_rewrite.c>
-php_value max_execution_time 300
+#php_value max_execution_time 300
 RewriteEngine On
-RewriteBase /webapp/
-RewriteRule ^index\.php$ - [L]
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /webapp/index.php [L]
+#RewriteBase /webapp/public
+#RewriteRule ^index\.php$ - [L]
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ public/index.php [L]
 </IfModule>
+# Disable Directory Listings in this Directory and Subdirectories
+# This will hide the files from the public unless they know direct URLs
+#Options -Indexes
