--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,9 @@ RewriteEngine On
 #RewriteRule ^index\.php$ - [L]
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ public/index.php [L]
+##RewriteRule ^(.*)$ public/index.php [L]
+RewriteRule ^$ public/ [L]
+RewriteRule (.*) public/$1 [L]
 </IfModule>
 # Disable Directory Listings in this Directory and Subdirectories
 # This will hide the files from the public unless they know direct URLs
